@@ -254,6 +254,7 @@ for the JavaScript code in this tag.
 <ul>
 <li><a href="#h-161F43B1">News</a>
 <ul>
+<li><a href="#h-FA693E30">3/20/2020, JupyterHub Resources Available for Remote-Learning Situations</a></li>
 <li><a href="#h-CB18704C">2/6/2020, Unidata Science Gateway in the News</a></li>
 <li><a href="#h-BD3E46F8">10/30/2019, Python Workshop at the AMS 2020 Student Conference</a></li>
 <li><a href="#h-7AC1E6CA">9/17/2019, 2019 Gateways and eScience Conferences</a></li>
@@ -297,7 +298,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="org30aaa7d" class="figure">
+<div id="org9d9b669" class="figure">
 <p><img src="jupyterhub.png" alt="jupyterhub.png" style="border:2px solid #ccc;" />
 </p>
 <p><span class="figure-number">Figure 1: </span><i>Unidata Python Gallery GOES-16 true color notebook by Brian Blaylock available via the Unidata JupyterHub.</i></p>
@@ -309,6 +310,15 @@ for the JavaScript code in this tag.
 <p>
 <a href="news.xml"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/43/Feed-icon.svg/32px-Feed-icon.svg.png"></a>
 </p>
+</div>
+
+<div id="outline-container-org5d69bef" class="outline-3">
+<h3 id="h-FA693E30">3/20/2020, JupyterHub Resources Available for Remote-Learning Situations</h3>
+<div class="outline-text-3" id="text-h-FA693E30">
+<p>
+<a href="https://www.unidata.ucar.edu/blogs/news/entry/offer-unidata-science-gateway-jupyterhub">JupyterHub Resources Available for Remote-Learning Situations</a>
+</p>
+</div>
 </div>
 
 <div id="outline-container-org3d8c929" class="outline-3">
@@ -356,7 +366,7 @@ As part of our current <a href="https://www.unidata.ucar.edu/publications/direct
 </div>
 </div>
 
-<div id="outline-container-orgd463bb3" class="outline-2">
+<div id="outline-container-org51198a9" class="outline-2">
 <h2 id="h-D1710E1B">JupyterHub</h2>
 <div class="outline-text-2" id="text-h-D1710E1B">
 <p>
@@ -1065,7 +1075,7 @@ The Extreme Science and Engineering Discovery Environment
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Date: 2020-03-19 21:20:41 MDT</p>
+<p class="date">Date: 2020-03-20 10:46:31 MDT</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
